--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
-<html lang="en" th:fragment = "parent" xmlns:th="http://www.thymeleaf.org">
+<html class ="dark" lang="en" th:fragment = "parent(content)" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Base Page</title>
+    <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.css" rel="stylesheet" />
+    <link rel="stylesheet" data-th-href="@{'/css/output.css'}">
+
 </head>
 <body>
-    Base Page Content
+
+    <div data-th-replace="~{navbar :: navbar}"></div>
+
+    <div class="p-4">
+         <section data-th-replace = "${content}"></section>
+     </div>
+    <footer class="p-4">Footer : Smart Contact Manager
+    </footer>
+    <!-- maiin cointent-->
+    <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
+
 </body>
 </html>
