--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -4,8 +4,8 @@
 </head>
 <body>
     <div id = "aboutContent">
-        <h1>About Page</h1>
-        <p>Content : This is about page</p>
+        <h1>contact Page</h1>
+        <p>Content : This is contact page</p>
     </div>
 </body>
 </html>  
