--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html class ="dark" lang="en" th:fragment = "parent(content)" xmlns:th="http://www.thymeleaf.org">
+<html class ="light" lang="en" th:fragment = "parent(content)" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Base Page</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.css" rel="stylesheet" />
     <link rel="stylesheet" data-th-href="@{'/css/output.css'}">
 
 </head>
-<body>
+<body class="dark:bg-gray-900 bg-gray-100 dark:text-white">
 
     <div data-th-replace="~{navbar :: navbar}"></div>
 
@@ -19,6 +20,6 @@
     </footer>
     <!-- maiin cointent-->
     <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
-
+    <script data-th-src ="@{'/js/script.js'}"></script>
 </body>
 </html>
