--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -15,9 +15,9 @@
 
     <div class="p-4">
          <section data-th-replace = "${content}"></section>
-     </div>
-    <footer class="p-4">Footer : Smart Contact Manager
-    </footer>
+      </div>
+   <!-- <footer class="p-4">Footer : Smart Contact Manager
+    </footer> -->
     <!-- maiin cointent-->
     <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
     <script data-th-src ="@{'/js/script.js'}"></script>
